@@ -40,6 +40,7 @@ enum hl_group_kind
   HLG_LINE_HIGHLIGHT,
   HLG_ENABLED_BREAKPOINT,
   HLG_DISABLED_BREAKPOINT,
+  HLG_SELECTED_LINE_NUMBER,
   HLG_LOGO,
 
   HLG_LAST
