@@ -92,6 +92,7 @@ static const struct default_hl_group_info default_groups_for_curses[] = {
   {HLG_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_GREEN},
   {HLG_ENABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_RED, COLOR_BLACK},
   {HLG_DISABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_YELLOW, COLOR_BLACK},
+  {HLG_SELECTED_LINE_NUMBER, A_BOLD, A_BOLD, COLOR_WHITE, COLOR_BLACK},
   {HLG_LOGO, A_BOLD, A_BOLD, COLOR_BLUE, COLOR_BLACK},
   {HLG_LAST, A_NORMAL, A_NORMAL, -1, -1}
 };
@@ -114,6 +115,7 @@ static const struct default_hl_group_info default_groups_for_background_dark[]
   {HLG_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_GREEN},
   {HLG_ENABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_RED, -1},
   {HLG_DISABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_YELLOW, -1},
+  {HLG_SELECTED_LINE_NUMBER, A_BOLD, A_BOLD, -1, -1},
   {HLG_LOGO, A_BOLD, A_BOLD, COLOR_BLUE, -1},
   {HLG_LAST, A_NORMAL, A_NORMAL, -1, -1}
 };
@@ -139,6 +141,7 @@ static struct hl_group_name hl_group_names[] = {
   {HLG_LINE_HIGHLIGHT, "LineHighlight"},
   {HLG_ENABLED_BREAKPOINT, "Breakpoint"},
   {HLG_DISABLED_BREAKPOINT, "DisabledBreakpoint"},
+  {HLG_SELECTED_LINE_NUMBER, "SelectedLineNr"},
   {HLG_LOGO, "Logo"},
   {HLG_LAST, "NULL"}
 };
