@@ -815,6 +815,9 @@ breakpoint set.
 @item DisabledBreakpoint
 This represents the group that is used when CGDB displays a line that has a 
 disabled breakpoint set.
+@item SelectedLineNr
+This represents the group that is used when CGDB is displaying the currently
+selected line.  This is the line that the cursor is on.
 @item Logo
 This is the group CGDB uses to display its logo on startup when no source 
 file can be auto detected.
