@@ -1,3 +1,7 @@
+   * Added a new highlighting group, SelectedLineNr. From the documentation:
+     This represents the group that is used when CGDB is displaying the 
+     currently selected line.  This is the line that the cursor is on.
+
    * CGDB shuts down now when it receives C-d (control d), just like GDB 
      does.
     
